cluster/apps/traefik/traefik/ingress/technitium/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan
  namespace: technitium
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`technitium.lan.${EXTERNAL_DOMAIN}`) || Host(`dns.lan.${EXTERNAL_DOMAIN}`)
      #match: ClientIP("192.168.50.98") # Use this to bootstrap DNS during recovery
      kind: Rule
      services:
        - name: technitium
          namespace: technitium
          passHostHeader: true
          port: 5380
  tls:
    secretName: "wildcard-internal-${EXTERNAL_DOMAIN/./-}-tls"
